k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
  namespace: dev
  labels:
    app: hello-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-web
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
        - name: nginx
          image: rani19/hello-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
