k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web
  namespace: dev
spec:
  selector:
    app: hello-web
  ports:
    - port: 80
      targetPort: 80
